[package]
name = "mkv-strip"
version = "0.2.9"
edition = "2021"
description = "Strip, extract, and add tracks in MKV files"
license = "MIT"

[dependencies]
mkv-element = { version = "0.4", features = ["utils"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
bytes = "1.11.1"

[build-dependencies]
winresource = "0.1"